# deeplearning-mpg-predict

./: app.py  dnn_model.keras  model.ipynb  pyproject.toml  requirements.txt
static/: style.css
templates/: index.html
