[project]
name = "deeplearning-regression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "flask>=3.1.3",
    "ipykernel>=7.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "tensorflow>=2.21.0",
]

[dependency-groups]
dev = [
    "nbconvert>=7.17.1",
]
